Fixed issue with overlapping digits

--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -130,7 +130,7 @@ select {
 } */
 
 #tannerSizeDiv svg {
-    width: 80%;
+    width: 85%;
     height: 500px; 
     max-width: 100%;
     display: block;
@@ -233,4 +233,8 @@ select {
 .MathJax_Display {
     max-width: 100%;
     text-align: center;
+}
+
+mjx-math {
+    font-size:80% !important;
 }
